--- a/Libraries/Perl/dist.ini
+++ b/Libraries/Perl/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Mark Wilkinson
 copyright_year   = 2014
 
-version = 0.13
+version = 0.14
 
 [@Basic]
 [PkgVersion]
@@ -18,6 +18,7 @@ Data::UUID::MT = 0
 JSON = 0
 URI::Escape = 0
 LWP::Simple = 0
+RDF::NS = 0
 
 [Prereqs / TestRequires]
 File::Slurp = 0
