updating dist with additinal dependencies
see above

--- a/Libraries/Perl/FAIR/dist.ini
+++ b/Libraries/Perl/FAIR/dist.ini
@@ -1,15 +1,17 @@
-name    = DCAT
+name    = FAIR_Data
 author  = Mark Wilkinson (markw [at] illuiminae [dot] com)
 license = Perl_5
 copyright_holder = Mark Wilkinson
-copyright_year   = 2014
+copyright_year   = 2015
 
-version = 0.15
+version = 0.16
 
 [@Basic]
 [PkgVersion]
 [NextRelease]
 [Prereqs]
+Data::UUID::MT = 0
+Math::Random::MT::Auto = 0
 RDF::Trine::Parser = 0
 RDF::Trine::Model = 0
 RDF::Query = 0
