moosified for the second release.  Changed from DCAT profile to FAIR profile.  Using OWL ontology instead of RDFS schema

--- a/Libraries/Perl/FAIR/dist.ini
+++ b/Libraries/Perl/FAIR/dist.ini
@@ -4,23 +4,23 @@ license = Perl_5
 copyright_holder = Mark Wilkinson
 copyright_year   = 2015
 
-version = 0.16
+version = 0.17
 
 [@Basic]
 [PkgVersion]
 [NextRelease]
+[PodWeaver]
 [Prereqs]
-Data::UUID::MT = 0
-Math::Random::MT::Auto = 0
+Moose = 0;
 RDF::Trine::Parser = 0
 RDF::Trine::Model = 0
 RDF::Query = 0
 RDF::Trine::Serializer = 0
-Data::UUID::MT = 0
 JSON = 0
 URI::Escape = 0
 LWP::Simple = 0
 RDF::NS = 0
+UUID::Generator::PurePerl = 0
 
 [Prereqs / TestRequires]
 File::Slurp = 0
